[SIX-237] Fixed spacing between posts on Company blog page

--- a/wp-content/themes/sixgill/css/custom/all_blog.css
+++ b/wp-content/themes/sixgill/css/custom/all_blog.css
@@ -88,3 +88,7 @@
 	width: 31%; 
 	float: right;
 }
+
+.posts-list {
+	margin-bottom: 30px;
+}
