--- a/wp-content/themes/sixgill/css/custom/all_press.css
+++ b/wp-content/themes/sixgill/css/custom/all_press.css
@@ -31,3 +31,7 @@
 .posts-list {
 	margin-bottom: 30px;
 }
+
+.container-fluid {
+	padding-left: 0px;
+}
